--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "next": "^15.3.3",
     "phaser": "^3.90.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "zustand": "^5.0.5"
   }
 }
